# vect-ai

./: .gitignore  Anchor.toml  Cargo.toml  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  QUICKSTART.md  RAYDIUM_SWAP_GUIDE.md  README.md  SECURITY_AUDIT.md  build.ps1
app/: package.json  tsconfig.json
app/src/: index.ts  test-raydium-swap.ts
programs/raydium_swapper/: Cargo.toml
programs/raydium_swapper/src/: lib.rs
programs/vectai_oracle/: Cargo.toml
programs/vectai_oracle/src/: lib.rs
programs/vectai_token/: Cargo.toml
programs/vectai_token/src/: lib.rs
programs/vectai_trader/: Cargo.toml
programs/vectai_trader/src/: lib.rs  raydium_swap.rs
tests/: oracle_tests.rs  token_tests.rs  trader_tests.rs
