[package]
name = "raydium-swapper"
version = "0.1.0"
description = "Minimal Raydium swap via CPI (USDC/SOL devnet pool)"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_swapper"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = "1.18.10"
