[package]
name = "vectai_token"
version = "0.1.0"
description = "VECT.AI Standard SPL Token Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vectai_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }